# multi-modal-traj

./: .gitignore  README.md
circle/: circle_env.py  gen_expert_traj.py  view_expert.py
circle/bc/: distrib.py  play.py  test.py  train.py  utils.py
circle/bc/save/: model.pt
circle/gail/: agent.py  distrib.py  env_runner.py  model.py  test.py  train.py
circle/gail/save/: model.pt
circle/infogail/: agent.py  distrib.py  env_runner.py  model.py  test.py  train.py
circle/infogail/save/: model.pt
circle/ours/: agent.py  multi_env.py  play.py  test.py  train.py
circle/ours/save/: model3000.pt
circle/vae_bc/: test.py  train.py
circle/vae_bc/save/: model.pt
gx/: CMakeLists.txt
gx/src/: main.cpp  window.hpp
gx/src/rendering/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  marchingcube.cpp  marchingcube.h  mctable.hpp  mesh.cpp  mesh.h  obj2d.cpp  obj2d.h  obj3d.cpp  obj3d.h  objloader.hpp  plot.cpp  plot.h  pose.cpp  pose.h  primitive.hpp  shader.cpp  shader.h  texture.cpp  texture.h
motion/: gen_sa_data.py  motion_env.py
motion/bc/: __init__.py  distrib.py  train.py
motion/bc/save/: model100000.pt
motion/gail/: __init__.py  agent.py  distrib.py  env_runner.py  model.py  train.py
motion/gail/save/: model.pt
motion/infogail/: __init__.py  agent.py  env_runner.py  model.py  test.py  train.py
motion/ours/: __init__.py  agent.py  distrib.py  env_runner.py  model.py  multi_env.py  test.py  train.py
motion/vae/: model.py  train.py
motion/vae_bc/: distrib.py  model.py  test.py  train.py  utils.py
motion/visualization/: gui_manifold.py  gui_policy.py  gui_recon.py  imgui.ini  renderer_manifold.py  renderer_policy.py  renderer_recon.py
traffic/: gen_expert_traj.py  traffic_env.py  view_expert.py
traffic/bc/: model.py  play.py  test.py  train.py
traffic/gail/: agent.py  distrib.py  env_runner.py  model.py  multi_env.py  test.py  train.py
traffic/infogail/: agent.py  distrib.py  env_runner.py  model.py  play.py  test.py  train.py
traffic/ours/: agent.py  env_runner.py  model.py  multi_env.py  test.py  train.py
traffic/vae_bc/: test.py  train.py
(+60 files in other folders)
